# open-web-agent-rs

./: .dockerignore  .env  .env.cerebras  .env.example  .env.fireworks  .env.google  .env.groq  .env.openai  .gitignore  .toak-ignore  Cargo.toml  Dockerfile  LICENSE  Local.Dockerfile  README.md  Remote.Dockerfile  bun.lockb  compose.yml  fly.toml  killport.js  package.json  searxng_tester.mts  tsconfig.json
.github/workflows/: main.yml
assets/: index.html
crates/agent-server/: Cargo.toml
crates/agent-server/src/: config.rs  routes.rs  setup.rs
crates/agent-server/src/agents/: deep_research.rs  image_generator.rs  news.rs  search.rs
crates/agent-server/src/handlers/: models.rs
crates/agent-server/src/utils/: base64.rs
crates/inference-engine/: Cargo.toml  README.md  openai-api-test.js
crates/inference-engine/src/: main.rs  model.rs  openai_types.rs  server.rs
crates/inference-engine/tests/: model_tests.rs  text_generation_tests.rs  token_output_stream_tests.rs
crates/local_inference_engine/: Cargo.toml  README.md  openai_api_test.js
crates/local_inference_engine/src/: lib.rs
crates/local_inference_engine/tests/: text_generation_tests.rs
docs/: agents.md  api.md  configuration.md  index.md  input.md  installation.md  streams.md  tokens.md
local_inference_engine/: Cargo.toml  README.md  api_test.html  openai_api_test.js  test.sh
local_inference_engine/src/: cli.rs  main.rs  server.rs  text_generation.rs  utilities_lib.rs
local_inference_engine/tests/: model_tests.rs  token_output_stream_tests.rs
searxng/: README.md  auth-file  create_auth_file.sh  searxng.Dockerfile  settings.yml  uwsgi.ini
smoke-tests/: test-deep-research.ts  test-search.ts
src/: config.rs  counter.rs  genaiscript.rs  main.rs  routes.rs  session_identify.rs
src/agents/: crypto_market.rs  image_generator.rs  mod.rs  news.rs  scrape.rs  search.rs
src/handlers/: agents.rs  error.rs  mod.rs  model_context.rs  not_found.rs  status.rs  stream.rs  ui.rs  webhooks.rs
src/utils/: mod.rs  utils.rs
