[package]
name = "web-agent-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
edition = "2021"
name = "agent-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.1.0"
tokio-stream = "0.1.16"
uuid = { version = "1.11.0", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
serde_json = "1.0.133"
futures = "0.3.31"
dotenv = "0.15.0"
shell-escape = "0.1.5"
rust-embed = "8.5.0"
bytes = "1.8.0"
lazy_static = "1.5.0"
sled = "0.34.7"
tower-http = { version = "0.6.2", features = ["trace"] }
anyhow = "1.0.97"
base64 = "0.22.1"
fips204 = "0.4.6"
